# symphonai

./: README.md  docker-compose.yml
backend/: Dockerfile  Dockerfile.ollama  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
frontend/: README.md  docker-compose.yml  drizzle.config.ts  dump.sql  localhost.session.sql  mario.md  package.json  pnpm-lock.yaml
frontend/migrations/: 0000_rainy_spacker_dave.sql  schema.ts
frontend/migrations/meta/: 0000_snapshot.json  _journal.json
frontend/src/: routes.tsx
frontend/src/components/: MessageBox.tsx
frontend/src/components/apiModal/: index.tsx
frontend/src/components/icons/: Icons.tsx
frontend/src/components/navbar/: NavbarAdmin.tsx  NavbarLinksAdmin.tsx
frontend/src/components/sidebar/: Sidebar.tsx
frontend/src/components/sidebar/components/: Content.tsx  SidebarCard.tsx
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/server/api/: root.ts
frontend/src/server/api/routers/: example.ts
frontend/src/theme/: styles.ts
frontend/src/utils/: api.ts  navigation.tsx
frontend/taskData/sql/: 1_jpk_naglowek.sql  2_jpk_podmiot.sql  3_vat_sprzedaz.sql  4_vat_zakup.sql  ddl.sql
